--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@ https://www.tooplate.com/view/2115-marvel
               in Flutter, I have a diverse skill set and a strong track record of successfully delivering high-quality
               mobile applications.</p>
 
-            <div class="custom-btn-group mt-4">
+            <!-- <div class="custom-btn-group mt-4">
               <a href="#" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
               <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get a free quote</a>
-            </div>
+            </div> -->
           </div>
         </div>
 
