add icon on title

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="author" content="">
 
   <title>Pratama Setya Aji - Portfolio</title>
+  <link rel="icon" type="images/x-icon" href="https://img.icons8.com/dusk/64/null/code.png" />
+
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/unicons.css">
