--- a/index.html
+++ b/index.html
@@ -197,6 +197,17 @@ https://www.tooplate.com/view/2115-marvel
           <div class="timeline">
             <div class="timeline-wrapper">
               <div class="timeline-yr">
+                <span>2023</span>
+              </div>
+              <div class="timeline-info">
+                <h3><span>Fullstack JS Developer</span><small>corom Music Entertainment</small></h3>
+                <p>Collaborate with Product & Design teams who will define the user story. Slicing the design from UI/UX
+                  into a reusable, pixel perfect web & mobile code.</p>
+              </div>
+            </div>
+
+            <div class="timeline-wrapper">
+              <div class="timeline-yr">
                 <span>2021</span>
               </div>
               <div class="timeline-info">
