--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ https://www.tooplate.com/view/2115-marvel
                 <span>2023</span>
               </div>
               <div class="timeline-info">
-                <h3><span>Fullstack JS Developer</span><small>corom Music Entertainment</small></h3>
+                <h3><span>Fullstack JS Developer</span><small>Corom Music Entertainment</small></h3>
                 <p>Collaborate with Product & Design teams who will define the user story. Slicing the design from UI/UX
                   into a reusable, pixel perfect web & mobile code.</p>
               </div>
