--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ https://www.tooplate.com/view/2115-marvel
 -->
 </head>
 
-<body>
+<body class="dark-mode">
 
   <!-- MENU -->
   <nav class="navbar navbar-expand-sm navbar-light">
@@ -72,12 +72,11 @@ https://www.tooplate.com/view/2115-marvel
 
   <!-- ABOUT -->
   <section class="about full-screen d-lg-flex justify-content-center align-items-center" id="about">
-    <div class="container">
+    <div class="container" >
       <div class="row">
-
         <div class="col-lg-7 col-md-12 col-12 d-flex align-items-center">
           <div class="about-text">
-            <small class="small-text">Welcome to <span class="mobile-block">my portfolio website!</span></small>
+            
             <h1 class="animated animated-text">
               <span class="mr-2">Hi, I'm</span>
               <div class="animated-info">
@@ -87,9 +86,7 @@ https://www.tooplate.com/view/2115-marvel
               </div>
             </h1>
 
-            <p>Frontend developer with 6 years of experience in React and React Native as well as 2 years of experience
-              in Flutter, I have a diverse skill set and a strong track record of successfully delivering high-quality
-              mobile applications.</p>
+            <p>Specialize in building applications using React Native, Flutter, Node.js, and Firebase. With 8+ years of experience, I've successfully developed transportation apps, e-commerce platforms, real-time chat systems, streaming services, and project management tools.</p>
 
             <!-- <div class="custom-btn-group mt-4">
               <a href="#" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
@@ -108,6 +105,8 @@ https://www.tooplate.com/view/2115-marvel
     </div>
   </section>
 
+  
+
   <!-- PROJECTS -->
   <section class="project py-5" id="project">
     <div class="container">
@@ -123,7 +122,7 @@ https://www.tooplate.com/view/2115-marvel
             <div class="item">
               <div class="project-info">
                 <a href="https://play.google.com/store/apps/details?id=app.cicle" target="_blank">
-                  <img src="images/project/p-1.png" class="img-fluid" alt="project image" style="padding: 50px">
+                  <img src="images/project/p-1.webp" class="img-fluid" alt="project image" style="padding: 50px">
                 </a>
               </div>
             </div>
@@ -131,7 +130,7 @@ https://www.tooplate.com/view/2115-marvel
             <div class="item">
               <div class="project-info">
                 <a href="https://play.google.com/store/apps/details?id=com.zipkos" target="_blank">
-                <img src="images/project/p-2.png" class="img-fluid" alt="project image" style="padding: 50px">
+                <img src="images/project/p-2.webp" class="img-fluid" alt="project image" style="padding: 50px">
                 </a>
               </div>
             </div>
@@ -139,7 +138,7 @@ https://www.tooplate.com/view/2115-marvel
             <div class="item">
               <div class="project-info">
                 <a href="https://play.google.com/store/apps/details?id=id.meteor.alfamind" target="_blank">
-                <img src="images/project/p-3.png" class="img-fluid" alt="project image" style="padding: 50px">
+                <img src="images/project/p-3.webp" class="img-fluid" alt="project image" style="padding: 50px">
                 </a>
               </div>
             </div>
@@ -147,7 +146,7 @@ https://www.tooplate.com/view/2115-marvel
             <div class="item">
               <div class="project-info">
                 <a href="https://play.google.com/store/apps/details?id=com.meteor.musikbagus" target="_blank">
-                <img src="images/project/p-4.png" class="img-fluid" alt="project image" style="padding: 50px">
+                <img src="images/project/p-4.webp" class="img-fluid" alt="project image" style="padding: 50px">
                 </a>
               </div>
             </div>
@@ -155,7 +154,7 @@ https://www.tooplate.com/view/2115-marvel
             <div class="item">
               <div class="project-info">
                 <a href="https://play.google.com/store/apps/details?id=com.dialog.boost.client.android" target="_blank">
-                <img src="images/project/p-5.png" class="img-fluid" alt="project image" style="padding: 50px">
+                <img src="images/project/p-5.webp" class="img-fluid" alt="project image" style="padding: 50px">
                 </a>
               </div>
             </div>
@@ -163,24 +162,107 @@ https://www.tooplate.com/view/2115-marvel
             <div class="item">
               <div class="project-info">
                 <a href="https://play.google.com/store/apps/details?id=id.myboost.agent" target="_blank">
-                <img src="images/project/p-6.png" class="img-fluid" alt="project image" style="padding: 50px">
+                <img src="images/project/p-6.webp" class="img-fluid" alt="project image" style="padding: 50px">
                 </a>
               </div>
             </div>
 
             <div class="item">
               <div class="project-info">
-                <img src="images/project/p-7.png" class="img-fluid" alt="project image" style="padding: 50px">
+                <img src="images/project/p-7.webp" class="img-fluid" alt="project image" style="padding: 50px">
               </div>
             </div>
 
             <div class="item">
               <div class="project-info">
-                <img src="images/project/p-8.png" class="img-fluid" alt="project image" style="padding: 50px">
+                <img src="images/project/p-8.webp" class="img-fluid" alt="project image" style="padding: 50px">
               </div>
             </div>
           </div>
 
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- TECHNICAL EXPERTISE -->
+  <section class="technical-expertise py-5" id="technical-expertise">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-10 col-md-12 col-12">
+          <h2 class="mb-4 text-center">Technical Expertise</h2>
+          <div class="expertise-grid">
+            <div class="expertise-item">
+              <span class="expertise-icon">
+                <!-- Mobile & Web App Development: Smartphone SVG -->
+                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#007bff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="5" y="2" width="14" height="20" rx="2"/><line x1="12" y1="18" x2="12" y2="18"/></svg>
+              </span>
+              <div class="expertise-body">
+                <strong class="expertise-title">Mobile & Web App Development:</strong>
+                <span class="expertise-desc">React Native, Flutter, Next.js, Node.js</span>
+              </div>
+            </div>
+            <div class="expertise-item">
+              <span class="expertise-icon">
+                <!-- Backend & Cloud Solutions: Cloud SVG -->
+                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#28a745" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17.5 19a4.5 4.5 0 0 0 0-9 5.5 5.5 0 0 0-10.9 1.5A4.5 4.5 0 0 0 6.5 19h11z"/></svg>
+              </span>
+              <div class="expertise-body">
+                <strong class="expertise-title">Backend & Cloud Solutions:</strong>
+                <span class="expertise-desc">Firebase (Auth, Firestore, Storage, Crashlytics)</span>
+              </div>
+            </div>
+            <div class="expertise-item">
+              <span class="expertise-icon">
+                <!-- Real-Time & Interactive Features: Bolt SVG -->
+                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#ffc107" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"/></svg>
+              </span>
+              <div class="expertise-body">
+                <strong class="expertise-title">Real-Time & Interactive Features:</strong>
+                <span class="expertise-desc">Socket.IO, Push Notifications</span>
+              </div>
+            </div>
+            <div class="expertise-item">
+              <span class="expertise-icon">
+                <!-- API Integrations: Link SVG -->
+                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#17a2b8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 13a5 5 0 0 1 7 7l-1.5 1.5a5 5 0 0 1-7-7"/><path d="M14 11a5 5 0 0 0-7-7L5.5 5.5a5 5 0 0 0 7 7"/></svg>
+              </span>
+              <div class="expertise-body">
+                <strong class="expertise-title">API Integrations:</strong>
+                <span class="expertise-desc">RESTful APIs, GraphQL, Third-Party SDKs</span>
+              </div>
+            </div>
+            <div class="expertise-item">
+              <span class="expertise-icon">
+                <!-- Advanced Features: Map SVG -->
+                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#6f42c1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="1 6 1 22 8 18 16 22 23 18 23 2 16 6 8 2 1 6"/></svg>
+              </span>
+              <div class="expertise-body">
+                <strong class="expertise-title">Advanced Features:</strong>
+                <span class="expertise-desc">Google Maps API, QR Code Scanner, Bluetooth, Streaming (Music & Video), Background Services</span>
+              </div>
+            </div>
+            <div class="expertise-item">
+              <span class="expertise-icon">
+                <!-- Payments: Credit Card SVG -->
+                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#fd7e14" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="5" width="20" height="14" rx="2"/><line x1="2" y1="10" x2="22" y2="10"/></svg>
+              </span>
+              <div class="expertise-body">
+                <strong class="expertise-title">Payments:</strong>
+                <span class="expertise-desc">Stripe, Midtrans, Google Play & App Store In-App Purchases</span>
+              </div>
+            </div>
+            <div class="expertise-item">
+              <span class="expertise-icon">
+                <!-- CI/CD & Deployment: Rocket SVG -->
+                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#e83e8c" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 13a8 8 0 0 1 8-8V2l4 4-4 4V7a6 6 0 0 0-6 6h3l-4 4-4-4h3z"/></svg>
+              </span>
+              <div class="expertise-body">
+                <strong class="expertise-title">CI/CD & Deployment:</strong>
+                <span class="expertise-desc">Codemagic, Fastlane, Play Store & App Store Publishing</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
